# jetstream-pytorch

./: .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  analyze_sharegpt.py  convert_checkpoints.py  decode_microbenchmark.py  download.py  install_everything.sh  install_everything_gpu.sh  jax_test.py  jax_wrapper.py  keys_original  original_scores  pyproject.toml  run_interactive.py  run_interactive_disaggregated.py  run_interactive_multiple_host.py  run_offline.py  run_ray_serve_interleave.py  run_server.py  run_server_with_ray.py  send_requests.py  single_decode.py  single_prefill_decode.py
benchmarks/: analyze_sharegpt.py  basic_ops.py  decode_microbenchmark.py  jax_test.py  llama_offline.sh  mixtral_offline.sh  offline_benchmark.py  prefill_offline.py  run_interactive.py  run_offline.py  summary.md
default_shardings/: gemma.yaml  llama-2-blockwise-quant.yaml  llama-2.yaml  llama-3.yaml  llama-blockwise-quant.yaml  llama.yaml  mistral.yaml  mixtral.yaml
docs/: add_a_new_model.md  add_hf_checkpoint_conversion.md
jetstream_pt/: .attention_kernel.py.swp  __init__.py  attention_kernel.py  cache_manager.py  cli.py  config.py  engine.py  environment.py  fetch_models.py  gcs_to_cns.sh  hf_tokenizer.py  layers.py  model_base.py  model_utils.py  moe_kernel.py  offline_inference.py  page_attention_manager.py  quantize.py  quantize_model.py  ray_engine.py  ray_engine_master.py  ray_engine_worker.py  ray_worker.py  sampling_utils.py  torchjax.py
mlperf/: .llama_run.sh.swp  README.md  accuracy_run.sh  audit.conf  backend.py  benchmark_run.sh  consolidate.py  dataset.py  evaluate_accuracy.py  gmm.py  install.sh  llama_audit.sh  llama_run.sh  main.py  main2.py  mixtral_run.sh  mlperf.conf  (+5 more)
(+67 files in other folders)
