[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.2.0"
name = "jetstream_pt"
dependencies = [
    "absl-py",
    "flatbuffers",
    "flax",
    "sentencepiece",
    "pytest",
    "google-jetstream",
    "google-cloud-storage",
    "safetensors",
]

requires-python = ">=3.10"
license = {file = "LICENSE"}
